@@ -94,10 +94,10 @@ win32:RC_FILE = qtspim.rc
 
 
 QMAKE_YACC          = bison
-QMAKE_YACCFLAGS     = -d --defines=parser.tab.h --output=parser.tab.cpp
+QMAKE_YACCFLAGS     = --defines=parser_yacc.h --output=parser_yacc.cpp
 QMAKE_YACCFLAGS_MANGLE = -p yy
-QMAKE_YACC_HEADER   = parser.tab.h
-QMAKE_YACC_SOURCE   = parser.tab.cpp
+QMAKE_YACC_HEADER   = parser_yacc.h
+QMAKE_YACC_SOURCE   = parser_yacc.cpp
 
 QMAKE_LEX           = flex
 QMAKE_LEXFLAGS_MANGLE = -Pyy
@@ -122,7 +122,7 @@ buildhelpcollection.name    = Build help collection
 buildhelpcollection.input   = HELP_COL_PROJ
 buildhelpcollection.output  = help/${QMAKE_FILE_BASE}.qhc
 linux|macx:buildhelpcollection.commands= bash -c '\"pushd ${QMAKE_FILE_PATH}; qcollectiongenerator ${QMAKE_FILE_BASE}.qhcp; popd; $(COPY) ${QMAKE_FILE_PATH}/${QMAKE_FILE_BASE}.qhc ${QMAKE_FILE_OUT};\"'
-win32:buildhelpcollection.commands= cmd -c '\"pushd ${QMAKE_FILE_PATH} & qcollectiongenerator ${QMAKE_FILE_BASE}.qhcp & popd & $(COPY) ${QMAKE_FILE_PATH}\\${QMAKE_FILE_BASE}.qhc ${QMAKE_FILE_OUT}\"'
+win32:buildhelpcollection.commands= sh -c '\"pushd ${QMAKE_FILE_PATH} ; qcollectiongenerator ${QMAKE_FILE_BASE}.qhcp ; popd ; $(COPY) ${QMAKE_FILE_PATH}/${QMAKE_FILE_BASE}.qhc ${QMAKE_FILE_OUT}\"'
 buildhelpcollection.CONFIG  = no_link recursive
 
 QMAKE_EXTRA_COMPILERS       += buildcompressedhelp buildhelpcollection
